# library

./: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATION.md  README.md  app.py  auth.py  choices.py  commands.py  config.py  docker-compose.yml  gunicorn.conf.py  llm_caller.py  models.py  pyproject.toml  requirements.txt  tag_manager.py  utils.py
docs/: toc-resolution.md
migrations/versions/: 717c2541940c_initial_schema.py  a1b2c3d4e5f6_drop_users_email_column.py
routes/: _helpers.py  auth.py  index.py  index_routes.py  metadata.py  read_routes.py  reader.py  upload.py  upload_routes.py
static/css/: index.css  reader.css  styles.css
static/js/: darkmode.js  main.js  reader.js
templates/: index.html  reader.html
tests/: _epub_builder.py  conftest.py  test_app_factory.py  test_commands.py  test_llm_caller.py  test_matching.py  test_proxy_auth.py  test_routes_auth.py  test_routes_book.py  test_routes_metadata.py  test_routes_reader.py  test_routes_upload.py  test_utils.py
