[project]
name = "inquire-library"
version = "0.1.0"
description = "AI-enhanced EPUB library application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anthropic==0.45.2",
    "anyio==4.8.0",
    "beautifulsoup4==4.12.3",
    "blinker==1.9.0",
    "brotli==1.1.0",
    "cachelib==0.9.0",
    "certifi==2025.1.31",
    "click==8.1.8",
    "distro==1.9.0",
    "ebooklib==0.18",
    "flask==3.1.0",
    "flask-caching==2.3.0",
    "flask-compress==1.17",
    "flask-login==0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "jiter==0.8.2",
    "lxml==5.3.0",
    "markupsafe==3.0.2",
    "numpy==2.2.3",
    "pillow==11.1.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.37",
    "typing-extensions==4.12.2",
    "webassets==2.0",
    "werkzeug==3.1.3",
    "zstandard==0.23.0",
]

[dependency-groups]
dev = [
    "astroid==3.3.8",
    "dill==0.3.9",
    "isort==6.0.0",
    "mccabe==0.7.0",
    "platformdirs==4.3.6",
    "pylint==3.3.4",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff==0.9.5",
    "tomlkit==0.13.2",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "TID"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
